# sped

./: aes.c  bench.sh  faest.c  faest_aes.c  faest_aes_128.c  faest_aes_192.c  faest_aes_256.c  faest_aes_320.c  faest_aes_512.c  faest_param.c.in  fields.c  fields.h  instances.c  instances.h  meson.build  owf.c  owf.h  random_oracle.c  random_oracle.h  universal_hashing.c  universal_hashing.h
faest_320f/: meson.build
faest_320s/: meson.build
faest_512f/: meson.build
faest_512s/: meson.build
faest_em_320f/: meson.build
faest_em_320s/: meson.build
faest_em_512f/: meson.build
faest_em_512s/: meson.build
tests/: aes.cpp  aes_prove.cpp  basic.cpp.in  instances.cpp  instances.hpp  meson.build  test_faest_tvs.cpp  test_faest_tvs.hpp  vc.cpp
tools/: .~lock.Params_Fixed.csv#  .~lock.selected.csv#  320-512.txt  Params_Fixed.csv  cmp.md  crypto_sign_generator.py  cvt.py  parse.py  result.md  result.txt  selected.csv
